[package]
name = "pong_network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.49.0", features = ["tcp", "dns", "gossipsub", "identify", "mplex", "yamux", "noise", "websocket", "async-std"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3"
async-std = "1.10.0"
tokio-stream = "0.1"
libp2p-identify = "0.44.2"
libp2p-gossipsub = "0.46.1"
